--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         <header>
             <!-- place navbar here -->
         </header>
-        <main class="d-flex justify-content-center">
+        <main class="d-flex justify-content-center mt-5">
             <input type="text" placeholder="Search" id="searchInput">
             <button id="buttonSearch">Send</button>
+                <div class="photos">
+                    <!-- Photos here -->
+                </div>
         </main>
         <footer>
             <!-- place footer here -->
