--- a/index.html
+++ b/index.html
@@ -27,11 +27,26 @@
               </nav>
         </header>
         <main class="d-flex justify-content-center mt-5">
-            <div id="container">
+            <div id="container-fluid">
+              <div class="col-xxl-8 px-4 py-5 mx-auto">
+                <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                  <div class="col-10 col-sm-8 col-lg-6">
+                    <img src="https://images.pexels.com/photos/339379/pexels-photo-339379.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block mx-lg-auto img-fluid main-image" alt="Bootstrap Themes" width="390" loading="lazy">
+                  </div>
+                  <div class="col-lg-6">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Photo Gallery</h1>
+                    <p class="lead">Explore a stunning collection of photos from around the world. Immerse yourself in breathtaking landscapes, captivating cityscapes, and fascinating wildlife captured through the lens of talented photographers.</p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                      <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
+                        <a href="#searchResult">Explore</a></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
                 <div class="d-flex justify-content-center mx-auto mb-4" id="titleContainer">
                     <h2 id="title"></h2>
                 </div>
-                <div id="searchResult" class="row container">
+                <div id="searchResult" class="row container mx-auto">
                 </div>
             </div>
                 
